# celery-fastapi-test

./: .env  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md
app/: main.py  worker_analyze.py  worker_preprocess.py
app/static/: script.js  style.css
app/templates/: index.html
project/: __init__.py
